# jscrt

./: CMakeLists.txt  README.md  main.cpp
res/: LLVM-3.4.lib  test.js
res/javascript/: parser.grammar  scanner.lexer
src/: javascript.cpp  javascript.h
src/javascript/: js.h  jsast.h  lexer.cpp  parser.cpp  parser.h
test/: grammar.test.cpp
